Fe/poc to json flutter get major (#41)
* add route to recipe saving

* Instancie les requests via service cubit

* F.S : [WIP] - AppRoutes updated

AppRoute updated to dynamic class with adjustable oken.

* F.S : [WIP] - Crud buttons

Back button working, all buttons should be functional. Services need work.

* F.S : WIP - JsonEncode issues

JSON Encode not working

* add json_serializable

* F.S : [WIP] JsonSerializable

JsonSerializable completed, required a flutter pub get force major updates. Now stuck with an SSL problem.

* F.S : [WIP] TODO nettoyés

Liste des TODO nettoyée de telle manière à ce que seuls les éléments d'actualité soient conservés.

* F.S : [WIP] SLL issue

AppLocalization and SSL issues.

* F.S : [WIP] Pre-favourite removal

* F.S : [WIP] 401 on posts

IsFavorite excluded successfully from jsonserializer

* F.S : TODO removed

* F.S : [WIP] Add still not working

* F.S : Nav bar fixed

* F.S : [WIP] Post, Put, Delete working

* F.S : Snackbar solved.

Post, Put, Delete all working, fixed issue with snackbar that was causing issue with return to previous menu.

* F.S : Fix multiples

Fixs de PR et fixs variés (images, null time, etc.)

* F.S : WIP Traduction

Pre-merge dev

* F.S : Last push

Tags with color fixed, pages completed, every page and function tested.

* F.S : Correctif du menu

Impossible que l'application build sur le develop actuel car la page de profil n'était pas importée dans celle de navigation. Cette situation est rectifiée.

* F.S : Retrait des termes inutiles

Traductions nettoyées.

* F.S : Requested modifications

Does NOT include modifications that should have been done in a previous PR (unrelated to this one).

* CR fixes and authentication typos

Co-authored-by: Guillaume Gervais <goglu.gervais@gmail.com>
Co-authored-by: Guillaume Gervais <guillaumeg023@gmail.com>
Co-authored-by: Mikaël H-Deschamps <mikael.hubert-deschamps@usherbrooke.ca>

--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -6,6 +6,15 @@
   "global_slogan": "Remix your meals to your heart's content",
   "global_filter": "Filter",
 
+  "global_form_add": "Add",
+  "global_form_cancel": "Cancel",
+  "global_form_delete": "Delete",
+  "global_form_discard": "Discard",
+  "global_form_discard_message": "Discard changes?",
+  "global_form_delete_message": "Definitely delete this item?",
+
+  "no_image": "NO IMAGE AVAILABLE",
+
   "app_bar_recipe_details": "Recipe details",
 
   "demo_access": "Press anywhere on the screen to access the demo",
@@ -96,5 +105,11 @@
   "unit_type_unit": "unit",
 
   "error_unknown": "An unknown error occured during the execution. Press anywhere to restart the application.",
-  "error_authentification": "An authentication error occured during the execution. To access this feature, press anywhere on this page to restart the application."
+  "error_authentication": "An authentication error occured during the execution. To access this feature, press anywhere on this page to restart the application.",
+
+  "feature_exploration": "This page will display a list of recipes shared by other users, which you will be able to download and adjust to your own taste.",
+  "feature_grocery": "This page will display the required ingredients of choosen recipes that you do not currently own in your pantry.",
+  "feature_ingredients": "This page will display all the known ingredients and their generic substitutes that may apply in most of the situations.",
+  "feature_pantry": "This page will help you manage the ingredients you have at your disposal, which will in turn allow us to remove them from your grocery list as well as to suggest you recipes you can currently cook.",
+  "feature_profile": "This page will display your profile informations and allow you to change most of them, including your profile picture."
 }
